--- a/embold-blue.com/solutions-industry.html
+++ b/embold-blue.com/solutions-industry.html
@@ -110,65 +110,81 @@
               <h4>Customer Stories</h4>
               <div class="block-lists">
                 <div class="wrap-item" id="as-content-1">
-                  <h3 class="click">Recovering Task Force Projects</h3>
+                  <h3 class="click">Advanced Driver Assistance Systems (ADAS)</h3>
                   <div class="arrow click">
                     <i class="fas fa-angle-down"></i>
                   </div>
                   <div class="paragraph">
                     <p>
-                      Your SOP date is getting closer and closer and your software is still not fully working as required? Over the last nine years we have helped software suppliers and Tier-1s in achieving their target software delivery dates. We come in on short notice, assess the software system down to the source code level and give clear recommendations on how to achieve the desired quality in the available time.
-                    </p>
-                    <p>
-                      Our Task Force Software Recover projects have proven to be very efficient and successful in development projects of car multimedia systems, Heads-up displays, camera systems, car networking and autonomous driving.
+                      Embold has been used in complex driver assistance projects across the automotive industry. It helped to quickly analyze complex algorithms with high data processing requirements to derive recommendations for improvement.
                     </p>
                     <button class="btn btn-default btn-md btn-more">Read More Case Studies</button>
                   </div>
                 </div>
                 <div class="wrap-item" id="as-content-2">
-                  <h3 class="click">Assessing and Managing Software Suppliers</h3>
+                  <h3 class="click">Infotainment Systems</h3>
                   <div class="arrow click">
                     <i class="fas fa-angle-down"></i>
                   </div>
                   <div class="paragraph">
                     <p>
-                      You are consistently facing quality problems with the software that is being delivered to you? You want to establish a quality management process for your software suppliers to ensure a high quality standard? Our customers use Embold to assess the overall software quality of their supplier’s source code. This helps them to identify quality issues and to start with continuous quality improvement.
-                    </p>
-                    <p>
-                      In the past Embold helped our customers to gain full transparency on the software quality on multiple key performance indicators such as maintainability and extensibility of a delivered software system. For many customers, Embold is even a part of the Supplier Quality Assurance process. This has improved the interaction with our customers’ suppliers significantly and increased the overall software quality and satisfaction.
+                      We have analyzed infotainment systems from almost all major car companies in the world, where we helped to ship high quality software to customers. Systems like infotainment are especially critical because they expose features which are directly consumed by the users.
                     </p>
                     <button class="btn btn-default btn-md btn-more">Find out Use cases</button>
                   </div>
                 </div>
                 <div class="wrap-item" id="as-content-3">
-                  <h3 class="click">Validating Improving Software Architecture</h3>
+                  <h3 class="click">Telematics Systems</h3>
                   <div class="arrow click">
                     <i class="fas fa-angle-down"></i>
                   </div>
                   <div class="paragraph">
                     <p>
-                      You are planning to take a major architecture decision for one of your legacy applications? You are considering splitting a monolith application into smaller micro-serves and/or moving it to the cloud? With our experience in automotive projects we supported architecture decisions of our customers and helped to plan software re-factorings.
-                    </p>
-                    <p>
-                      In one project we assisted an automotive manufacturing customer with a software project on Product Lifecycle Management. It was a very big legacy project and they were facing multiple software and architecture issues. After fully assessing the existing software structure with the help of Embold, we helped our customer to compare the benefit of different architectural changes. As a result, a clear architecture roadmap was developed.
+                      Embold is the core development platform for a major telematics systems manufacturer. There it ensures that high quality software is shipped to all customers, even if requirements are complex and development cycles challenging.
                     </p>
                     <button class="btn btn-default btn-md btn-more">Find out Use cases</button>
                   </div>
                 </div>
                 <div class="wrap-item" id="as-content-4">
-                  <h3 class="click">Supporting internal software R&D</h3>
+                  <h3 class="click">Product Lifecycle Management (PLM) Systems</h3>
                   <div class="arrow click">
                     <i class="fas fa-angle-down"></i>
                   </div>
                   <div class="paragraph">
                     <p>
-                      You are facing software quality issues in your internal software development? You cannot meet the required quality standard in your delivery? Embold significantly improved the overall software quality in R&D departments of our customers, by increasing the productivity at the same time. In addition, Gamma especially helped suppliers to prove their quality improvements to customers, and supports with MISRA compliance.
-                    </p>
-                    <p>
-                      One of our customers is an automotive supplier and has introduced Embold as central development platform for their entire R&D department. They are simultaneously running projects with almost all major car manufacturing companies, where they deliver in-car chipsets. Embold is used to ensure that quality standard of their different customers can be met. In addition, it showed that it can significantly increase the development efficiency.
+                      We helped a major PLM implementation project to assess their software quality and to derive recommendations for improvement. This included architectural recommendations, as well as hints down to the code level.
                     </p>
                     <button class="btn btn-default btn-md btn-more">Find out Use cases</button>
                   </div>
                 </div>
+                <!-- block -->
+                <div class="wrap-item" id="as-content-5">
+                  <h3 class="click">Supplier Management</h3>
+                  <div class="arrow click">
+                    <i class="fas fa-angle-down"></i>
+                  </div>
+                  <div class="paragraph">
+                    <p>
+                      Embold helps our customers to gain full transparency on the software quality of their suppliers on multiple key performance indicators such as maintainability, robustness and extensibility. For many customers, Embold is even a part of the Supplier Quality Assurance process.
+                    </p>
+                    <button class="btn btn-default btn-md btn-more">Find out Use cases</button>
+                  </div>
+                </div>
+                <!-- block -->
+                <!-- block -->
+                <div class="wrap-item" id="as-content-6">
+                  <h3 class="click">And More</h3>
+                  <div class="arrow click">
+                    <i class="fas fa-angle-down"></i>
+                  </div>
+                  <div class="paragraph">
+                    <p>
+                      We supported many automotive software projects and tasks forces, both for corporate software and in-car software.  This includes Heads-up displays, camera systems, car networking and autonomous driving.
+                    </p>
+                    <button class="btn btn-default btn-md btn-more">Find out Use cases</button>
+                  </div>
+                </div>
+                <!-- block -->
               </div>
             </div>
           </div>
@@ -184,17 +200,17 @@
           <div class="block-user-story">
             <div class="user-story wrap-content-alt">
               <div class="tab-user-story">
-                <div class="tab-item active" id="btn-embedded-software-engineering">
+                <div class="tab-item active" id="btn-1">
                   <div class="company-name" style="font-size: 1em;">
                     Embedded Software Engineering
                   </div>
                 </div>
-                <div class="tab-item" id="btn-supplier-management">
+                <div class="tab-item" id="btn-2">
                   <div class="company-name" style="font-size: 1em;">
                     Supplier Management
                   </div>
                 </div>
-                <div class="tab-item" id="btn-quality-improvement">
+                <div class="tab-item" id="btn-3">
                   <div class="company-name" style="font-size: 1em;">
                     Quality Improvement
                   </div>
@@ -203,36 +219,11 @@
             </div>
           </div>
         </div>
-        <script>
-          $('#btn-embedded-software-engineering').click(function() {
-            $('#btn-embedded-software-engineering').addClass('active');
-            $('#btn-supplier-management').removeClass('active');
-            $('#btn-quality-improvement').removeClass('active');
-            $('#use-case-embedded-software-engineering').addClass('display');
-            $('#use-case-supplier-management').removeClass('display active');
-            $('#use-case-quality-improvement').removeClass('display active');
-          });
-          $('#btn-supplier-management').click(function() {
-            $('#btn-embedded-software-engineering').removeClass('active');
-            $('#btn-supplier-management').addClass('active');
-            $('#btn-quality-improvement').removeClass('active');
-            $('#use-case-embedded-software-engineering').removeClass('display active');
-            $('#use-case-supplier-management').addClass('display active');
-            $('#use-case-quality-improvement').removeClass('display active');
-          });
-          $('#btn-quality-improvement').click(function() {
-            $('#btn-embedded-software-engineering').removeClass('active');
-            $('#btn-supplier-management').removeClass('active');
-            $('#btn-quality-improvement').addClass('active');
-            $('#use-case-embedded-software-engineering').removeClass('display active');
-            $('#use-case-supplier-management').removeClass('display active');
-            $('#use-case-quality-improvement').addClass('display active');
-          });
-        </script>
         <div class="col-8">
           <div class="block-user-story">
             <div class="wrap-content user-story wrap-content-alt">
-              <div id="use-case-embedded-software-engineering" class="wrap-use-case-body display">
+              <!-- block -->
+              <div id="use-case-1" class="wrap-use-case-body display">
                 <h3>
                   Embedded software engineering
                 </h3>
@@ -242,19 +233,15 @@
                   </p>
                   <img src="images/embedded-software-engineering-table.png" width="100%" height="auto" />
                   <p>
-                    <strong>New:</strong><br />
                     Embold uses a build-interceptor to analyze all the dependencies of embedded software projects. With this detailed analysis, fine granular metrics and specific design anti-patterns can be identified and linked to KPIs. This helps to get “failure in time” rates to levels unreached at very low costs.
-                  </p>
-                  <p>
-                    <strong>Old</strong><br />
-                    Each project or variance can have its own AI model, helping it to find bugs specific to its constraints and surrounding systems. Embold helps you to get your “failure in time” rates to levels unreached at very low costs. With competitive prices being able to win consecutive biddings, you can also use positive effects for tasks like requirements elicitations.
                   </p>
                   <p>
                     Become the best value partner for your oems and internal customers.
                   </p>
                 </div>
               </div>
-              <div id="use-case-supplier-management" class="wrap-use-case-body">
+              <!-- block -->
+              <div id="use-case-2" class="wrap-use-case-body">
                 <h3>
                   Supplier Management
                 </h3>
@@ -268,7 +255,8 @@
                   </p>
                 </div>
               </div>
-              <div id="use-case-quality-improvement" class="wrap-use-case-body">
+              <!-- block -->
+              <div id="use-case-3" class="wrap-use-case-body">
                 <h3>
                   Quality improvement
                 </h3>
@@ -282,6 +270,7 @@
                   </p>
                 </div>
               </div>
+              <!-- block -->
             </div>
           </div>
           <div class="block-user-story">
