--- a/embold-blue.com/solutions-user-roles-architects.html
+++ b/embold-blue.com/solutions-user-roles-architects.html
@@ -109,16 +109,13 @@
               <div class="block-lists">
                 <!-- block -->
                 <div class="wrap-item" id="as-content-1">
-                  <h3 class="click">Identify and solve Design Problems</h3>
+                  <h3 class="click">Improve Software Design</h3>
                   <div class="arrow click">
                     <i class="fas fa-angle-down"></i>
                   </div>
                   <div class="paragraph">
                     <p>
-                      You know your software architecture is not optimal and foresee that this will cause challenges in the future? You fear that quality KPIs such as maintainability, robustness or extensibility will be affected by the current architecture? With Embold we are providing you with a toolset that will make your life as an architect much more enjoyable, by helping you to identify and solve Design Problems easily.
-                    </p>
-                    <p>
-                      With Embold, you can analyse your code’s structural design against our unique set of anti-patterns on class, function and method levels. These anti-patterns have been created both from books and research, and from our own experience in writing and analyzing business critical software. Especially in combination with our unique rating system this can help you to identify and solve design problems in software projects with much less time required compared to other tools or reading the source code.
+                      Embold has helped to improve to software design of some of the most complex software systems in the world. This includes operating systems, autonomous driving, high-throughput telecommunication systems or oil-exploration systems.
                     </p>
                     <button class="btn btn-default btn-md btn-more">Find out Use cases</button>
                   </div>
@@ -132,10 +129,7 @@
                   </div>
                   <div class="paragraph">
                     <p>
-                      You are in charge of the Software Design, but don’t have the time or resources to ensure architecture standards are followed consequently? You have designed the architecture a long time back and are unsure if it is still followed through? We have developed Embold to help you overcoming architecture challenges and maintaining a high architecture standard.
-                    </p>
-                    <p>
-                      With our design anti-patterns and rating system, you as an architect can see immediately when a certain software change introduces a structure design issue and react upon it before the architecture problems cumulate. Very often it is difficult to keep track on the overall software architecture during the development, especially in agile environments. This way larger architectural issues are being introduced and identified too late, leading to costly and time-consuming analysis and re-factoring.
+                      With our design anti-patterns and rating system, you as an architect can see immediately when a certain software change introduces a structure design issue and react upon it before the architecture problems cumulate.
                     </p>
                     <button class="btn btn-default btn-md btn-more">Find out Use cases</button>
                   </div>
@@ -149,10 +143,7 @@
                   </div>
                   <div class="paragraph">
                     <p>
-                      You know a certain class or module is not architected optimally, leading to high maintenance and bug proneness? You fear the effort and risk with analyzing the component, proposing and implementing a refactoring? Proposing a refactoring is typically a challenging task. The current state of the module or component that is to be refactored must be assessed, which includes analyzing the structure of those together with internal and external dependencies.
-                    </p>
-                    <p>
-                      With the Embold dependency plot this becomes a much easier task, as ingoing and outgoing dependencies of components can be visualized up to as many levels as required. With the partitioning algorithm we even go one step further and propose possible refactorings of components using graph and NLP analysis.
+                      Proposing a refactoring is typically a challenging task. Embold provides visualizations and with the partitioning algorithm even recommendations on how to refactor software. With the help of machine learning and NLP analysis refactoring even becomes fun.
                     </p>
                     <button class="btn btn-default btn-md btn-more">Find out Use cases</button>
                   </div>
@@ -204,6 +195,7 @@
                   <p>
                     Embold finds anti patterns in code and visualizes them in its recommendation engine. It helps to understand the structur of unknown code through NLP analysis, to get a better understanding of the code.
                   </p>
+                  <img src="images/use-case-nlp-graph.png" width="100%" height="auto" />
                   <p>
                     The connections between methods and functions are shown, making it easy to find a functional unit in a class and extract it. This saves a big amount of the analysis time and makes refactoring faster and less exhausting for developers and architects.
                   </p>
