--- a/embold-blue.com/solutions-user-roles-developers.html
+++ b/embold-blue.com/solutions-user-roles-developers.html
@@ -123,32 +123,26 @@
               <h4>Customer Stories</h4>
               <div class="block-lists">
                 <div class="wrap-item" id="as-content-1">
-                  <h3 class="click">Focus on what matters</h3>
+                  <h3 class="click">Write cleaner code faster</h3>
                   <div class="arrow click">
                     <i class="fas fa-angle-down"></i>
                   </div>
                   <div class="paragraph">
                     <p>
-                      You don’t have the time to fully analyze the existing code to find the best solution? You are forced to start coding immediately? Embold helps you to understand foreign code quicker. In addition, it shows you early where problems are evolving. This way you can save time during development and use this additional time to concentrate on parts of the code that really require additional care.
-                    </p>
-                    <p>
-                      With this, Embold has helped thousands of developers like you to work less stressed, to have more time to focus on complex tasks and even to free up time for personal development.
+                      Embold assists you with writing cleaner code faster. It points out early when code is not clean, and even recommends solutions to this. This brings a new perspective on code, helps you to develop personally, to advance your career, and ultimately to become a better software developer.
                     </p>
                     <button class="btn btn-default btn-md btn-more">Find out Use cases</button>
                   </div>
                 </div>
                 <!-- block -->
                 <div class="wrap-item" id="as-content-2">
-                  <h3 class="click">Write cleaner code</h3>
+                  <h3 class="click">Become the code master</h3>
                   <div class="arrow click">
                     <i class="fas fa-angle-down"></i>
                   </div>
                   <div class="paragraph">
                     <p>
-                      You know yourself that the code you have written is not the best? But you don’t have the time or concentration left to write cleaner code? Embold assists you with this. It points out early when code is not clean, and even recommends solutions to this. To do this, Embold is not only highlighting code issues, but also structural design issues like God Classes.
-                    </p>
-                    <p>
-                      We have seen at many of our customers that developers like you learned to think in design patterns by using Embold. This helped them to get a new perspective on code, to develop personally, to advance their career, and ultimately to become better software developers.
+                      Embold helps you to understand code quicker. In addition, it shows you early where problems are evolving. With this, Embold has helped thousands of developers like you to work less stressed, to have more time to focus on complex tasks and even to free up time for personal development.
                     </p>
                     <button class="btn btn-default btn-md btn-more">Find out Use cases</button>
                   </div>
@@ -162,10 +156,7 @@
                   </div>
                   <div class="paragraph">
                     <p>
-                      There is little fun left in your work environment? Everybody is only working towards the next deadline? We believe software development should be fun. Software development is tough work. Therefore, to us, it’s imperative that software tools are easy to use and fun to work with. The last thing they should do, is make things more complex.
-                    </p>
-                    <p>
-                      Many of our customers are surprised when they see Embold for the first time. They are used to boring engineering tools that are difficult to use. Embold, instead, is set-up in minutes, it looks great and it gives you all the data and freedom to explore the complexity of software engineering anyway.
+                      We believe software development should be fun. Software development is tough work. Therefore, to us, it’s imperative that software tools are easy to use and fun to work with. The last thing they should do is make things more complex.
                     </p>
                     <button class="btn btn-default btn-md btn-more">Find out Use cases</button>
                   </div>
