--- a/embold-blue.com/solutions-user-roles-pm.html
+++ b/embold-blue.com/solutions-user-roles-pm.html
@@ -87,7 +87,8 @@
         <div class="col-12">
           <div class="block-user-story">
             <div class="wrap-content headcopy wrap-content-alt">
-              "Only 16% of the IT projects examined can be<br />classified as successful (Study of the Oxford University 2003)"
+              "Only 16% of the IT projects examined<br />can be classified as successful"<br />
+               <span style="display: block;font-size: 16px; color: #2A3141; font-weight: normal;">* Study of the Oxford University 2003</span>
             </div>
           </div>
         </div>
@@ -109,16 +110,13 @@
               <div class="block-lists">
                 <!-- block -->
                 <div class="wrap-item" id="as-content-1">
-                  <h3 class="click">Gain transparency</h3>
+                  <h3 class="click">Deliver software products on time</h3>
                   <div class="arrow click">
                     <i class="fas fa-angle-down"></i>
                   </div>
                   <div class="paragraph">
                     <p>
-                      You don’t know the status of your software? Whether the delivery is on track and the quality high? Embold has helped project managers across different industries to gain full transparency about their software development. Changes in quality become visible immediately and can be addressed before it is too late.
-                    </p>
-                    <p>
-                      Embold provides intuitive visuals and analytical tools like heat maps and KPIs. This way software quality does not stay a black box but becomes transparent to both developers and project managers. For many customers this has also lead to a significant improvement in communication and mutual understanding.
+                      Embold increases the development velocity throughout the project. When introduced early in projects, it can ensure quality and progress stay on track.  Through smart prioritization it ensures most important aspects are addressed first.
                     </p>
                     <button class="btn btn-default btn-md btn-more">Find out Use cases</button>
                   </div>
@@ -126,16 +124,13 @@
                 <!-- block -->
                 <!-- block -->
                 <div class="wrap-item" id="as-content-2">
-                  <h3 class="click">Deliver software on time</h3>
+                  <h3 class="click">Keep track of development progress</h3>
                   <div class="arrow click">
                     <i class="fas fa-angle-down"></i>
                   </div>
                   <div class="paragraph">
                     <p>
-                      The release date is moving closer but the development progress is not as projected? You fear the software might not be fit for purpose in the end? Embold increases the development velocity throughout the development. When introduced early in projects, it can ensure quality and progress stays on track.
-                    </p>
-                    <p>
-                      Embold has supported project managers to clearly prioritize software tasks together with their development teams. So when time is running short, everybody is working on the most important aspects first, to ensure the desired quality is released in the end.
+                      Embold has helped project managers across different industries to gain full transparency about their software development. Changes in quality become visible immediately and can be addressed before it is too late.
                     </p>
                     <button class="btn btn-default btn-md btn-more">Find out Use cases</button>
                   </div>
@@ -143,16 +138,27 @@
                 <!-- block -->
                 <!-- block -->
                 <div class="wrap-item" id="as-content-3">
-                  <h3 class="click">Recover Software Projects</h3>
+                  <h3 class="click">Ensure high software quality</h3>
                   <div class="arrow click">
                     <i class="fas fa-angle-down"></i>
                   </div>
                   <div class="paragraph">
                     <p>
-                      Your delivery date is getting closer and closer and your software is still not fully working as required? Over the last nine years we have helped software projects in achieving their target software delivery dates across industries. We come in on short notice, assess the software system down to the source code level and give clear recommendations on how to achieve the desired quality in the available time.
+                      For most customers, Embold is part of the Continuous Integration / Delivery pipeline. This way it ensures high software quality standards continuously through the project. In addition, it makes code reviews faster, so they are not skipped when time is short.
                     </p>
+                    <button class="btn btn-default btn-md btn-more">Find out Use cases</button>
+                  </div>
+                </div>
+                <!-- block -->
+                <!-- block -->
+                <div class="wrap-item" id="as-content-4">
+                  <h3 class="click">Software Project Recovery</h3>
+                  <div class="arrow click">
+                    <i class="fas fa-angle-down"></i>
+                  </div>
+                  <div class="paragraph">
                     <p>
-                      Our Software Recovery projects have proven to be very efficient and successful in development projects of car multimedia systems, Heads-up displays, camera systems, logistics systems, operating systems, telecommunication, core banking, core insurance and many more.
+                      Your delivery date is getting closer and closer and your software is still not fully working as required? We come in on short notice, assess the software system down to the source code level through Embold and give clear recommendations on how to achieve the desired quality in the available time.
                     </p>
                     <button class="btn btn-default btn-md btn-more">Find out Use cases</button>
                   </div>
@@ -218,26 +224,11 @@
                 <h3>
                   Shift - Left
                 </h3>
-                <div class="paragraph-use-cases">
+                <div class="paragraph paragraph-use-cases">
                   <p>
                     Everybody gets tired and unfocused over the day, no matter how much coffee we drink. Thus, even the best of us, sometimes make little mistakes or don’t see them. Therefore, we use tools to check on grammar and spelling, even if we know how to write an email without mistakes. It is simply faster to correct it immediately and gives you more time to focus on content.
                   </p>
                   <p>
-                    <strong>In development:</strong><br />
-                    Embold has IDE integrations, that continuously check on the quality of development and highlight code issues and anti-patterns while they are written in the IDE by developers. By this a lot of potential Bugs and Issues never even get committed, due to the little hints of Embold.
-                  </p>
-                  <p>
-                    <strong>In review:</strong><br />
-                    EMBOLD AI analysis the code in your commit and compares it with millions of other commits and if similar commits introduced a BUG. EMBOLD shows the reviewer immediately where to check more focussed for a potential bug.<br />
-                    <br />
-                    EMBOLD score, shows if the overall quality of the code is deteriorated by the commit. Depending on  your project status you can either accept taking technical debt deliberately or reject it.
-                  </p>
-                  <p>
-                    <strong>In project management:</strong><br />
-                    Most projects do not start on the green field, but on an existing code base. EMBOLD scores help you to decide at the start of the project which parts of the code base, you need to be cautious about and which parts you better don’t introduce to your project at all. Especially with microservices, this shifts rework left.
-                  </p>
-                  <p>
-                    <strong>For Website:</strong><br />
                     Embold is enabling your developers through AI and augmented development to make less rework, and shift these efforts left in the process. Because the later a bug is found, the more costly it will be
                   </p>
                   <img src="images/shift-left-1.png" width="100%" height="auto" />
@@ -259,6 +250,7 @@
                   <p>
                     Plus it helps to weld your team together with its managers and bridges the frustrating gap in day to day problem communication. Technical colleagues feel better understood and a more efficient communication is possible.
                   </p>
+                  <img src="images/use-case-screenshot-issues-table.png" width="100%" height="auto" />
                   <p>
                     Since Embold uses KPIs that agregate issues that the developers can link back to a line in the code base, Embold KPIs are actionable for managers as well as developers. When you as a manager say that you need to get the KPI “Accuracy” better throughout your portfolio, because customers complaint about problems with “Accurancy”, then developers know exactly what they must do. Line by line.  No misunderstanding, just brilliant execution at a fraction of the time.
                   </p>
