--- a/embold-blue.com/solutions-user-roles.html
+++ b/embold-blue.com/solutions-user-roles.html
@@ -111,7 +111,7 @@
           <div class="block-user-story">
             <div class="wrap-content overall wrap-content-alt" id="section-summary">
               <h4>Summary</h4>
-              <h3>EMBOLD For Excutives</h3>
+              <h3>EMBOLD For Executives</h3>
               <p>
                 Software is becoming core. Many industries have transitioned from human based operation, through extensive use of electronics into an entirely new phase in which software is not only the enabler of all functionality but has also become the one and significantly critical condition for efficient operation. In these environments, the current software will be the basis for future innovation. History has shown that core systems are not easy to replace. This is why the current software quality will determine the successful operation and the ability to innovate in the future.
               </p>
@@ -124,46 +124,37 @@
               <h4>Customer Stories</h4>
               <div class="block-lists">
                 <div class="wrap-item" id="as-content-1">
-                  <h3 class="click">Gain transparency</h3>
+                  <h3 class="click">Steer your global organization</h3>
                   <div class="arrow click">
                     <i class="fas fa-angle-down"></i>
                   </div>
                   <div class="paragraph">
                     <p>
-                      You don’t know the status of your software landscape? Which systems are strong in quality and which are rather weak? Embold has helped executives across different industries to gain full transparency about their software landscapes. This way, weak spots can be identified early and the budget can be prioritized accordingly.
-                    </p>
-                    <p>
-                      Embold provides executives with all the data needed to steer their software projects, in an intuitive and easy to understand way. It uses heat maps, ratings and charts to provide only relevant information and to make it easy to derive decisions. Gamma’s built-in Key Performance Indicators (KPIs) help you effectively track crucial aspects of development like maintainability, reusability, functionality and more.
+                      Embold provides you with all the data needed to steer your software organization, in an intuitive and easy to understand way. It uses heat maps, ratings, charts and built-in KPIs to effectively track crucial aspects of development like maintainability, reusability, functionality and more.
                     </p>
                     <button class="btn btn-default btn-md btn-more">Find out Use cases</button>
                   </div>
                 </div>
                 <div class="wrap-item" id="as-content-2">
-                  <h3 class="click">Build the basis for innovation</h3>
+                  <h3 class="click">Innovate faster</h3>
                   <div class="arrow click">
                     <i class="fas fa-angle-down"></i>
                   </div>
                   <div class="paragraph">
                     <p>
-                      You fear your software development is not up-to-mark to keep up with competition? You are not innovating fast enough? Embold helps to kill many birds with one stone: The productivity of your development teams increases, quality increases, and developers learn to become better engineers at the same time.
-                    </p>
-                    <p>
-                      Embold has shown that it can have a tremendous impact on software development organizations. For one customer, what they considered to be their weakest development team became the stars after two years of using Gamma. Increased development velocity has helped many customers to prototype and release innovative software faster.
+                      Embold helps to kill many birds with one stone: The productivity of your development teams increases, quality increases, and developers learn to become better engineers at the same time. This helps our customer to prototype and release innovative software faster.
                     </p>
                     <button class="btn btn-default btn-md btn-more">Find out Use cases</button>
                   </div>
                 </div>
                 <div class="wrap-item" id="as-content-3">
-                  <h3 class="click">Save software maintenance costs</h3>
+                  <h3 class="click">Save software costs</h3>
                   <div class="arrow click">
                     <i class="fas fa-angle-down"></i>
                   </div>
                   <div class="paragraph">
                     <p>
-                      Most of your IT budget is going into software maintenance? This has an impact on your ability to start new projects? Embold has helped our customers to both build software that is easier to maintain and extend, and to save costs by increasing the development velocity. At the same time, less time is going into analyzing software and onboarding new developers.
-                    </p>
-                    <p>
-                      We have seen significant cost reduction for many of our customers after introducing Embold and enabling their development organization. At the same time, velocity and quality increased, and bug rates went down. With integrated issue tracking, task management and tagging tools even collaboration within and across teams improved.
+                      We have seen significant cost reduction for many of our customers after introducing Embold. It has helped to both build software that is easier to maintain, and to save costs by increasing the development velocity and decreasing onboarding time for new developers.
                     </p>
                     <button class="btn btn-default btn-md btn-more">Find out Use cases</button>
                   </div>
@@ -214,21 +205,6 @@
                     Everybody gets tired and unfocused over the day, no matter how much coffee we drink. Thus, even the best of us, sometimes make little mistakes or don’t see them. Therefore, we use tools to check on grammar and spelling, even if we know how to write an email without mistakes. It is simply faster to correct it immediately and gives you more time to focus on content.
                   </p>
                   <p>
-                    <strong>In development:</strong><br />
-                    Embold has IDE integrations, that continuously check on the quality of development and highlight code issues and anti-patterns while they are written in the IDE by developers. By this a lot of potential Bugs and Issues never even get committed, due to the little hints of Embold.
-                  </p>
-                  <p>
-                    <strong>In review:</strong><br />
-                    EMBOLD AI analysis the code in your commit and compares it with millions of other commits and if similar commits introduced a BUG. EMBOLD shows the reviewer immediately where to check more focussed for a potential bug.<br />
-                    <br />
-                    EMBOLD score, shows if the overall quality of the code is deteriorated by the commit. Depending on  your project status you can either accept taking technical debt deliberately or reject it.
-                  </p>
-                  <p>
-                    <strong>In project management:</strong><br />
-                    Most projects do not start on the green field, but on an existing code base. EMBOLD scores help you to decide at the start of the project which parts of the code base, you need to be cautious about and which parts you better don’t introduce to your project at all. Especially with microservices, this shifts rework left.
-                  </p>
-                  <p>
-                    <strong>For Website:</strong><br />
                     Embold is enabling your developers through AI and augmented development to make less rework, and shift these efforts left in the process. Because the later a bug is found, the more costly it will be
                   </p>
                   <img src="images/shift-left-1.png" width="100%" height="auto" />
