--- a/embold-blue.com/solutions-industry-financial.html
+++ b/embold-blue.com/solutions-industry-financial.html
@@ -22,6 +22,10 @@
 </head>
 <body>
   <div class="nav-solutions"></div>
+  <div class="nav-mobile" id="nav-mobile">
+    <a href="index.html"><img src="images/logo-embold.svg" width="100" /></a>
+    <button class="menu-toggle btn-mobile-nav"></button>
+  </div>
 
   <div class="container block block-header-sub">
     <div class="row">
@@ -37,111 +41,215 @@
       <div class="row">
         <div class="col-12">
           <div class="tab-title">
-            <img src="./images/ic-md-arrow-slim-right.svg" width="40" height="40" /><br />
-            Select a your role
+            Select a your Industry <img src="./images/ic-md-arrow-slim-right.svg" width="24" height="24" />
           </div>
-          <div class="tab-wrap">
-            <div class="tab-item" onclick="window.location.href='./user-stories-industry.html'">
-              <div class="tab-item-icon ic-sm-user-executive"></div> <span>Automotive</span>
-            </div>
-            <div class="tab-item" onclick="window.location.href='./user-stories-industry-energy.html'">
-              <div class="tab-item-icon ic-sm-user-developer"></div> <span>Energy</span>
-            </div>
-            <div class="tab-item active" onclick="window.location.href='./user-stories-industry-financial.html'">
-              <div class="tab-item-icon ic-sm-user-architect"></div> <span>Financial and Insurance</span>
-            </div>
-            <div class="tab-item" onclick="window.location.href='./user-stories-industry-tmt.html'">
-              <div class="tab-item-icon ic-sm-user-pm"></div> <span>TMT</span>
-            </div>
-            <div class="tab-item" onclick="window.location.href='./user-stories-industry-natural.html'">
-              <div class="tab-item-icon ic-sm-user-pm"></div> <span>Natural Resources</span>
-            </div>
-          </div>
+          <ul class="tab-wrap">
+            <li class="tab-item init">
+              <img src="images/ic-sm-user-executive.svg" width="24" /> Automotive
+            </li>
+            <li class="tab-item active">
+              <img src="images/ic-sm-user-developer.svg" width="24" /> Financial
+            </li>
+            <li class="tab-item">
+              <img src="images/ic-sm-user-architect.svg" width="24" /> Industrial
+            </li>
+            <li class="tab-item">
+              <img src="images/ic-sm-user-pm.svg" width="24" /> Technology/Telecom
+            </li>
+            <li class="tab-item">
+              <img src="images/ic-sm-user-pm.svg" width="24" /> Others
+            </li>
+          </ul>
         </div>
       </div>
     </div>
   </div>
+  <script>
+  if (document.body.clientWidth < 814) {
+    $("ul.tab-wrap").on("click", ".init", function() {
+      $(this).closest("ul").children('li:not(.init)').toggle();
+    });
+
+    var allOptions = $("ul").children('li:not(.init)');
+    $("ul.tab-wrap").on("click", "li:not(.init)", function() {
+      allOptions.removeClass('selected');
+      $(this).addClass('selected');
+      $("ul").children('.init').html($(this).html());
+      allOptions.toggle();
+    });
+  }
+  </script>
 
   <section class="block block-sub-user-stories">
     <div class="container">
       <div class="row">
-        <div class="col-3">
-          <div class="block-sub-menu" id="nav-sub-solutions"></div>
-        </div>
-        <div class="col-9">
+        <div class="col-12">
           <div class="block-user-story">
-            <div class="wrap-content headcopy">
-              “You are a Good Executive<br />
-              But, you have a chance to be Great Executive”
+            <div class="wrap-content headcopy wrap-content-alt">
+              “The current software will decide which companies succeed in the digital transformation”
             </div>
-            <div class="wrap-content overall">
-              <h4>Overall</h4>
-              <h3>EMBOLD For Excutives</h3>
+          </div>
+        </div>
+        <div class="col-6">
+          <div class="block-user-story">
+            <div class="wrap-content overall wrap-content-alt" id="section-summary">
+              <h4>Summary</h4>
+              <h3>EMBOLD For Financial Industry</h3>
               <p>
-                As software has become the backbone of competitive advantage in all industries, bugs have become a monster of the modern executive. But while executive careers increasingly hinge on their IT and software infrastructure, most executives do not feel empowered to talk with their IT and feel distached from the risk they carry.
+                The digital transformation of the financial industry and its business models is at its peak. There is a high pressure to change due to potential competition from technology companies, regulation, low interest rates and cost pressure. Speed is becoming increasingly important in order to react to new competition or new requirements. This can quickly lead to costly errors and limit expandability.
+              </p>
+              <p>
+                At the same time, many software systems have been in use for decades and are no longer sufficient for the requirements of digitization. Grown legacy systems and company takeovers have led to a very complex system landscape and it is very time-consuming to create transparency across all systems used. Quality assurance often falls by the wayside. Embold has helped all our customers in the financial industry with those challenges.
               </p>
             </div>
-            <div class="wrap-content actual-story">
-              <h4>Actual Stories</h4>
-              <h3>EMBOLD</h3>
-              <p>
-                - A looking glass for executives to understand the risk and rewards of their software operations<br />
-                - Reconnects executives with their most relevant resources: The developers
-              </p>
-              <div class="block-quote">
-                Content from quotation
+          </div>
+        </div>
+        <div class="col-6">
+          <div class="block-user-story">
+            <div class="wrap-content actual-story wrap-content-alt" style="border-bottom: 0;" id="section-customerStories">
+              <h4>Customer Stories</h4>
+              <div class="block-lists">
+                <div class="wrap-item" id="as-content-1">
+                  <h3 class="click">Core Financial and Insurance Systems</h3>
+                  <div class="arrow click">
+                    <i class="fas fa-angle-down"></i>
+                  </div>
+                  <div class="paragraph">
+                    <p>
+                      Embold has been used to analyze core financial systems such as core systems for banking, investments funds, VCs, insurance, leasing systems and more. It creates transparency, accelerates software development and ensures high software quality standards, also with suppliers.
+                    </p>
+                    <button class="btn btn-default btn-md btn-more">Read More Case Studies</button>
+                  </div>
+                </div>
+                <div class="wrap-item" id="as-content-2">
+                  <h3 class="click">Legacy Systems</h3>
+                  <div class="arrow click">
+                    <i class="fas fa-angle-down"></i>
+                  </div>
+                  <div class="paragraph">
+                    <p>
+                      Embold can analyze even large legacy systems and provide quality recommendations quickly. This helps to understand old systems efficiently and can support in transformation or replacement projects
+                    </p>
+                    <button class="btn btn-default btn-md btn-more">Find out Use cases</button>
+                  </div>
+                </div>
+                <div class="wrap-item" id="as-content-3">
+                  <h3 class="click">Shadow IT</h3>
+                  <div class="arrow click">
+                    <i class="fas fa-angle-down"></i>
+                  </div>
+                  <div class="paragraph">
+                    <p>
+                      Embold can quickly analyze shadow software in specialist departments. This brings immediate transparency over all software assets and helps to assess their inherent risks. This helped our customer to address highest risk systems first.
+                    </p>
+                    <button class="btn btn-default btn-md btn-more">Find out Use cases</button>
+                  </div>
+                </div>
+                <div class="wrap-item" id="as-content-4">
+                  <h3 class="click">Outsourced software development</h3>
+                  <div class="arrow click">
+                    <i class="fas fa-angle-down"></i>
+                  </div>
+                  <div class="paragraph">
+                    <p>
+                      Embold helps our customers to ensure the software quality of their service providers stays high on multiple key performance indicators such as maintainability, robustness and extensibility. For many customers, Embold is a part of the Supplier Quality Assurance process.
+                    </p>
+                    <button class="btn btn-default btn-md btn-more">Find out Use cases</button>
+                  </div>
+                </div>
               </div>
             </div>
-            <div class="wrap-content user-story">
+          </div>
+        </div>
+        <div class="col-12">
+          <div class="block-user-story" style="padding:0;margin:0;border:0;">
+            <div class="wrap-content user-story wrap-content-alt" style="padding:0;margin:0;border:0;" id="section-useCases">
               <h4>Use Cases</h4>
+            </div>
+          </div>
+        </div>
+        <div class="col-4">
+          <div class="block-user-story">
+            <div class="user-story wrap-content-alt">
               <div class="tab-user-story">
-                <div class="tab-item active">
-                  <div class="logo logo-small-deutsche-leasing">
-                  </div>
-                  <div class="case-number">
-                    Case 1
-                  </div>
-                  <div class="company-name">
-                    Deutsche Leasing
+                <div class="tab-item active" id="btn-1">
+                  <div class="company-name" style="font-size: 1em;">
+                    Shift - Left
                   </div>
                 </div>
-                <div class="tab-item">
-                  <div class="logo logo-small-deutsche-leasing">
-                  </div>
-                  <div class="case-number">
-                    Case 1
-                  </div>
-                  <div class="company-name">
-                    Deutsche Leasing
+                <div class="tab-item" id="btn-2">
+                  <div class="company-name" style="font-size: 1em;">
+                    Quality improvement
                   </div>
                 </div>
-                <div class="tab-item">
-                  <div class="logo logo-small-deutsche-leasing">
-                  </div>
-                  <div class="case-number">
-                    Case 1
-                  </div>
-                  <div class="company-name">
-                    Deutsche Leasing
+                <div class="tab-item" id="btn-3">
+                  <div class="company-name" style="font-size: 1em;">
+                    Communication
                   </div>
                 </div>
-              </div>
-              <h3>
-                Deutsche Leasing
-              </h3>
-              <div class="paragraph">
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum aliquet risus vitae nisl egestas luctus. Nulla tempus tortor a dui fringilla tincidunt. Cras consequat sed nulla eu eleifend. Nullam consectetur lacus dolor, et consectetur enim accumsan at. Aenean commodo molestie lectus, venenatis fermentum nisl pellentesque vel. Proin eros ipsum, feugiat vitae urna eget, pellentesque porttitor metus. Aenean eleifend sed enim ut pharetra. Nullam molestie nunc ante, eu maximus diam ultrices sit amet. Integer fermentum posuere nisi, non placerat felis condimentum fringilla. Proin tincidunt ante dolor, non lobortis nibh porttitor et. Donec fringilla rhoncus consequat. Duis maximus sodales elementum. Nulla pharetra tortor dapibus, maximus quam dignissim, molestie purus. Morbi ut auctor neque, at aliquet eros.
-                </p>
-                <p>
-                  Aenean nec quam eget felis varius dictum vel quis nibh. Vestibulum accumsan urna ac dui sagittis tempus. Nulla interdum malesuada odio facilisis volutpat. Mauris pellentesque et felis nec ornare. Suspendisse libero ante, vestibulum in ligula id, rhoncus consectetur neque. Suspendisse in erat ac ligula pretium facilisis ac nec ante. Suspendisse egestas iaculis justo, in hendrerit metus placerat in. Vestibulum ac ultricies mauris, eu viverra odio. Phasellus sit amet aliquet erat. Duis cursus euismod enim, id pellentesque orci porta sit amet. Fusce felis nunc, pretium sit amet elit id, porta accumsan mauris. In faucibus mauris ut egestas hendrerit. Sed ac laoreet est. Donec elit tellus, imperdiet et risus hendrerit, rhoncus laoreet nisi. Mauris tincidunt diam quis orci gravida, ut eleifend mauris fermentum. Nunc finibus vehicula justo, elementum iaculis libero laoreet ac.
-                </p>
-                <p>
-                  Nullam eu bibendum ante. Pellentesque eget scelerisque sem. Nam sollicitudin felis nunc, sed vehicula ex sollicitudin id. Nulla arcu nulla, condimentum sit amet lacus in, accumsan dictum turpis. Nulla at tincidunt arcu. Proin ac magna libero. In lacus elit, facilisis vitae odio a, auctor iaculis sem. In iaculis ex diam, eget pharetra augue blandit eu.
-                </p>
               </div>
             </div>
-            <div class="wrap-content contact-sales">
+          </div>
+        </div>
+        <div class="col-8">
+          <div class="block-user-story">
+            <div class="wrap-content user-story wrap-content-alt">
+              <!-- block -->
+              <div id="use-case-1" class="wrap-use-case-body display">
+                <h3>
+                  Supplier Management
+                </h3>
+                <div class="paragraph-use-cases">
+                  <p>
+                    Embold enables you to give a quality score and trend to vendors and their teams. By adding a price tag, you can see where you can get the best quality value.
+                  </p>
+                  <img src="images/supplier-management.png" width="100%" height="auto" />
+                  <p>
+                    This data is combined by our BI reporting, if available, enabling you to have a strong portfolio view about vendors working for you, to always choose the best value for you.
+                  </p>
+                </div>
+              </div>
+              <!-- block -->
+              <div id="use-case-2" class="wrap-use-case-body">
+                <h3>
+                  Quality improvement
+                </h3>
+                <div class="paragraph-use-cases">
+                  <p>
+                    As a first to improve the quality of your project the hotspots are identified. Embold takes the developer activities as well as the tickets that effected certain components into account to create a risk metric. The Risk metric combined with a high number of code and design issues and bad metrics marks a certain component as hotspots in Embold.
+                  </p>
+                  <img src="images/quality-improvement.png" width="100%" height="auto" />
+                  <p>
+                    Together with the development teams, those hotspots can be addressed and a refactoring ticket for the next Sprint can be created. The teams normally prioritize those areas that are or will be under active development in the next sprints. By this your repositories and projects will always have a positive trend and your releases rollout like expected.
+                  </p>
+                </div>
+              </div>
+              <!-- block -->
+              <!-- block -->
+              <div id="use-case-3" class="wrap-use-case-body">
+                <h3>
+                  Communication - Support through visualisation and fair KPIs
+                </h3>
+                <div class="paragraph-use-cases">
+                  <p>
+                    When it comes to topics like technical debt and its effects, often non-technical persons have a hard time to understand, even if they are responsible for the resources tackling the task in the engine room directly or indirectly. Embold Visuals like our recommendation engine, heat map, trend reports and partitioning plot, let everybody in the meeting fast grasp the concept of the problem at hand. This helps highly to enable the smart thinking people in your company that are not technical to contribute to a solution or at least to understand the issue.
+                  </p>
+                  <p>
+                    Plus it helps to weld your team together with its managers and bridges the frustrating gap in day to day problem communication. Technical colleagues feel better understood and a more efficient communication is possible.
+                  </p>
+                  <p>
+                    Since Embold uses KPIs that agregate issues that the developers can link back to a line in the code base, Embold KPIs are actionable for managers as well as developers. When you as a manager say that you need to get the KPI “Accuracy” better throughout your portfolio, because customers complaint about problems with “Accurancy”, then developers know exactly what they must do. Line by line.  No misunderstanding, just brilliant execution at a fraction of the time.
+                  </p>
+                  <p>
+                    This is transparent and fair to everybody who is willing to commit to the process, which builds a team trust as well as goal alignment penetrating different levels of an organisation unseen for most people in their complete work life.
+                  </p>
+                </div>
+              </div>
+              <!-- block -->
+            </div>
+          </div>
+          <div class="block-user-story">
+            <div class="wrap-content contact-sales" id="section-contactSales">
               <h4>Contact Sales</h4>
               <div class="block-contact-sales">
                 Benjamin
@@ -228,6 +336,7 @@
       </div>
     </div>
   </div>
+  <div class="nav-mobile-full-screen" id="nav-mobile-full-screen-top"></div>
   <script src="js/main.js" type="text/javascript"></script>
   <script>
   $(window).on("scroll", function() {
@@ -244,5 +353,6 @@
     }
   });
   </script>
+
 </body>
 </html>
