--- a/embold-blue.com/solutions-team-size-business.html
+++ b/embold-blue.com/solutions-team-size-business.html
@@ -22,6 +22,10 @@
 </head>
 <body>
   <div class="nav-solutions"></div>
+  <div class="nav-mobile" id="nav-mobile">
+    <a href="index.html"><img src="images/logo-embold.svg" width="100" /></a>
+    <button class="menu-toggle btn-mobile-nav"></button>
+  </div>
 
   <div class="container block block-header-sub">
     <div class="row">
@@ -37,108 +41,201 @@
       <div class="row">
         <div class="col-12">
           <div class="tab-title">
-            <img src="./images/ic-md-arrow-slim-right.svg" width="40" height="40" /><br />
-            Select a your role
+            Select a your Team Size <img src="./images/ic-md-arrow-slim-right.svg" width="24" height="24" />
           </div>
-          <div class="tab-wrap">
-            <div class="tab-item" onclick="window.location.href='./user-stories-team-size.html'">
-              <div class="tab-item-icon ic-sm-user-executive"></div> <span>Indivisuals</span>
-            </div>
-            <div class="tab-item" onclick="window.location.href='./user-stories-team-size-teams.html'">
-              <div class="tab-item-icon ic-sm-user-developer"></div> <span>Teams</span>
-            </div>
-            <div class="tab-item active" onclick="window.location.href='./user-stories-team-size-business.html'">
-              <div class="tab-item-icon ic-sm-user-architect"></div> <span>Business</span>
-            </div>
-            <div class="tab-item" onclick="window.location.href='./user-stories-team-size-enterprise.html'">
-              <div class="tab-item-icon ic-sm-user-pm"></div> <span>Enterprise</span>
-            </div>
-          </div>
+          <ul class="tab-wrap">
+            <li class="tab-item init" onclick="window.location.href='./solutions-team-size.html'">
+              <img src="images/ic-sm-user-executive.svg" width="24" /> Teams
+            </li>
+            <li class="tab-item active" onclick="window.location.href='./solutions-team-size-business.html'">
+              <img src="images/ic-sm-user-developer.svg" width="24" /> Business
+            </li>
+            <li class="tab-item" onclick="window.location.href='./solutions-team-size-enterprise.html'">
+              <img src="images/ic-sm-user-architect.svg" width="24" /> Enterprise
+            </li>
+          </ul>
         </div>
       </div>
     </div>
   </div>
+  <script>
+  if (document.body.clientWidth < 814) {
+    $("ul.tab-wrap").on("click", ".init", function() {
+      $(this).closest("ul").children('li:not(.init)').toggle();
+    });
+
+    var allOptions = $("ul").children('li:not(.init)');
+    $("ul.tab-wrap").on("click", "li:not(.init)", function() {
+      allOptions.removeClass('selected');
+      $(this).addClass('selected');
+      $("ul").children('.init').html($(this).html());
+      allOptions.toggle();
+    });
+  }
+  </script>
 
   <section class="block block-sub-user-stories">
     <div class="container">
       <div class="row">
-        <div class="col-3">
-          <div class="block-sub-menu" id="nav-sub-solutions"></div>
-        </div>
-        <div class="col-9">
+        <div class="col-12">
           <div class="block-user-story">
-            <div class="wrap-content headcopy">
-              “You are a Good Executive<br />
-              But, you have a chance to be Great Executive”
+            <div class="wrap-content headcopy wrap-content-alt">
+              “Start by doing what’s necessary, then what’s possible,<br />
+              and suddenly you are doing the impossible.”
             </div>
-            <div class="wrap-content overall">
-              <h4>Overall</h4>
-              <h3>EMBOLD For Excutives</h3>
+          </div>
+        </div>
+        <div class="col-6">
+          <div class="block-user-story">
+            <div class="wrap-content overall wrap-content-alt" id="section-summary">
+              <h4>Summary</h4>
+              <h3>EMBOLD Solutions – Business</h3>
               <p>
-                As software has become the backbone of competitive advantage in all industries, bugs have become a monster of the modern executive. But while executive careers increasingly hinge on their IT and software infrastructure, most executives do not feel empowered to talk with their IT and feel distached from the risk they carry.
+                There is a high pressure to innovate, especially in smaller businesses. The time-to-market for new products or features is often very short and at the same time, finding and hiring high qualified developers is increasingly harder. We help our customers to stay ahead of competition and to win the market.
+              </p>
+              <p>
+                Very often compromises are made in the quality of the developed software, which in turn has an impact on the ability to innovate in the future, since technical debt accumulates. Embold has helped businesses across sectors, countries and markets to overcome this challenge, by enabling high development velocity and high quality at the same time.
               </p>
             </div>
-            <div class="wrap-content actual-story">
-              <h4>Actual Stories</h4>
-              <h3>EMBOLD</h3>
-              <p>
-                - A looking glass for executives to understand the risk and rewards of their software operations<br />
-                - Reconnects executives with their most relevant resources: The developers
-              </p>
-              <div class="block-quote">
-                Content from quotation
+          </div>
+        </div>
+        <div class="col-6">
+          <div class="block-user-story">
+            <div class="wrap-content actual-story wrap-content-alt" style="border-bottom: 0;" id="section-customerStories">
+              <h4>Customer Stories</h4>
+              <div class="block-lists">
+                <!-- block -->
+                <div class="wrap-item" id="as-content-1">
+                  <h3 class="click">Release software products fast</h3>
+                  <div class="arrow click">
+                    <i class="fas fa-angle-down"></i>
+                  </div>
+                  <div class="paragraph">
+                    <p>
+                      Embold increases the development velocity throughout the project. When introduced early in the development, it can ensure quality and progress stay on track.  Through smart prioritization it ensures time is only spent where it makes a big difference.
+                    </p>
+                    <button class="btn btn-default btn-md btn-more">Find out Use cases</button>
+                  </div>
+                </div>
+                <!-- block -->
+                <!-- block -->
+                <div class="wrap-item" id="as-content-2">
+                  <h3 class="click">Ensure high software quality</h3>
+                  <div class="arrow click">
+                    <i class="fas fa-angle-down"></i>
+                  </div>
+                  <div class="paragraph">
+                    <p>
+                      For most teams, Embold is part of the Continuous Integration / Delivery pipeline. This way it ensures high software quality standards continuously through the project. In addition, it makes code reviews faster, so they are not skipped when time is short.
+                    </p>
+                    <button class="btn btn-default btn-md btn-more">Find out Use cases</button>
+                  </div>
+                </div>
+                <!-- block -->
+                <!-- block -->
+                <div class="wrap-item" id="as-content-3">
+                  <h3 class="click">Innovate faster</h3>
+                  <div class="arrow click">
+                    <i class="fas fa-angle-down"></i>
+                  </div>
+                  <div class="paragraph">
+                    <p>
+                      Embold helps to kill many birds with one stone: The productivity of your development teams increases, quality increases, and developers learn to become better engineers at the same time. This helps our customer to prototype and release innovative software faster.
+                    </p>
+                    <button class="btn btn-default btn-md btn-more">Find out Use cases</button>
+                  </div>
+                </div>
+                <!-- block -->
               </div>
             </div>
-            <div class="wrap-content user-story">
+          </div>
+        </div>
+        <div class="col-12">
+          <div class="block-user-story" style="padding:0;margin:0;border:0;">
+            <div class="wrap-content user-story wrap-content-alt" style="padding:0;margin:0;border:0;" id="section-useCases">
               <h4>Use Cases</h4>
+            </div>
+          </div>
+        </div>
+        <div class="col-4">
+          <div class="block-user-story">
+            <div class="user-story wrap-content-alt">
               <div class="tab-user-story">
-                <div class="tab-item active">
-                  <div class="logo logo-small-deutsche-leasing">
-                  </div>
-                  <div class="case-number">
-                    Case 1
-                  </div>
-                  <div class="company-name">
-                    Deutsche Leasing
+                <div class="tab-item active" id="btn-1">
+                  <div class="company-name" style="font-size: 1em;">
+                    Project Quality Awareness
                   </div>
                 </div>
-                <div class="tab-item">
-                  <div class="logo logo-small-deutsche-leasing">
-                  </div>
-                  <div class="case-number">
-                    Case 1
-                  </div>
-                  <div class="company-name">
-                    Deutsche Leasing
+                <div class="tab-item" id="btn-2">
+                  <div class="company-name" style="font-size: 1em;">
+                    Shift - Left
                   </div>
                 </div>
-                <div class="tab-item">
-                  <div class="logo logo-small-deutsche-leasing">
-                  </div>
-                  <div class="case-number">
-                    Case 1
-                  </div>
-                  <div class="company-name">
-                    Deutsche Leasing
+                <div class="tab-item" id="btn-3">
+                  <div class="company-name" style="font-size: 1em;">
+                    Code Review
                   </div>
                 </div>
-              </div>
-              <h3>
-                Deutsche Leasing
-              </h3>
-              <div class="paragraph">
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum aliquet risus vitae nisl egestas luctus. Nulla tempus tortor a dui fringilla tincidunt. Cras consequat sed nulla eu eleifend. Nullam consectetur lacus dolor, et consectetur enim accumsan at. Aenean commodo molestie lectus, venenatis fermentum nisl pellentesque vel. Proin eros ipsum, feugiat vitae urna eget, pellentesque porttitor metus. Aenean eleifend sed enim ut pharetra. Nullam molestie nunc ante, eu maximus diam ultrices sit amet. Integer fermentum posuere nisi, non placerat felis condimentum fringilla. Proin tincidunt ante dolor, non lobortis nibh porttitor et. Donec fringilla rhoncus consequat. Duis maximus sodales elementum. Nulla pharetra tortor dapibus, maximus quam dignissim, molestie purus. Morbi ut auctor neque, at aliquet eros.
-                </p>
-                <p>
-                  Aenean nec quam eget felis varius dictum vel quis nibh. Vestibulum accumsan urna ac dui sagittis tempus. Nulla interdum malesuada odio facilisis volutpat. Mauris pellentesque et felis nec ornare. Suspendisse libero ante, vestibulum in ligula id, rhoncus consectetur neque. Suspendisse in erat ac ligula pretium facilisis ac nec ante. Suspendisse egestas iaculis justo, in hendrerit metus placerat in. Vestibulum ac ultricies mauris, eu viverra odio. Phasellus sit amet aliquet erat. Duis cursus euismod enim, id pellentesque orci porta sit amet. Fusce felis nunc, pretium sit amet elit id, porta accumsan mauris. In faucibus mauris ut egestas hendrerit. Sed ac laoreet est. Donec elit tellus, imperdiet et risus hendrerit, rhoncus laoreet nisi. Mauris tincidunt diam quis orci gravida, ut eleifend mauris fermentum. Nunc finibus vehicula justo, elementum iaculis libero laoreet ac.
-                </p>
-                <p>
-                  Nullam eu bibendum ante. Pellentesque eget scelerisque sem. Nam sollicitudin felis nunc, sed vehicula ex sollicitudin id. Nulla arcu nulla, condimentum sit amet lacus in, accumsan dictum turpis. Nulla at tincidunt arcu. Proin ac magna libero. In lacus elit, facilisis vitae odio a, auctor iaculis sem. In iaculis ex diam, eget pharetra augue blandit eu.
-                </p>
               </div>
             </div>
-            <div class="wrap-content contact-sales">
+          </div>
+        </div>
+        <div class="col-8">
+          <div class="block-user-story">
+            <div class="wrap-content user-story wrap-content-alt">
+              <!-- block -->
+              <div id="use-case-1" class="wrap-use-case-body display">
+                <h3>
+                  Project Quality Awareness
+                </h3>
+                <div class="paragraph-use-cases">
+                  <p>
+                    Embold, helps you to understand the code and architectural quality in your code landscape and projects. It shows at a glance through the Gamma Score, which projects are suffering from high technical debt on code level.
+                  </p>
+                  <p>
+                    By this you can embolden your developers with better resource allocation and create a positive eustress instead of vicious cycles that burn developers and project milestones. This favors a higher satisfaction of customers and developers.
+                  </p>
+                </div>
+              </div>
+              <!-- block -->
+              <!-- block -->
+              <div id="use-case-2" class="wrap-use-case-body">
+                <h3>
+                  Shift - Left
+                </h3>
+                <div class="paragraph paragraph-use-cases">
+                  <p>
+                    Everybody gets tired and unfocused over the day, no matter how much coffee we drink. Thus, even the best of us, sometimes make little mistakes or don’t see them. Therefore, we use tools to check on grammar and spelling, even if we know how to write an email without mistakes. It is simply faster to correct it immediately and gives you more time to focus on content.
+                  </p>
+                  <p>
+                    Embold is enabling your developers through AI and augmented development to make less rework, and shift these efforts left in the process. Because the later a bug is found, the more costly it will be
+                  </p>
+                  <img src="images/shift-left-1.png" width="100%" height="auto" />
+                  <p>
+                    Embold helps developers through IDE integration and highlighting of code and design issues to not introduce malicious code in the first place. We help you to keep quality at a decent level with static code analysis, while our AI ensures that bugs are not repeated. Embold is the first tool that enables to shift rework so far left, that more and more rework becomes part of the actual work of the developers. Embold will always safe you money and your developers sleepless nights.
+                  </p>
+                </div>
+              </div>
+              <!-- block -->
+              <!-- block -->
+              <div id="use-case-3" class="wrap-use-case-body">
+                <h3>
+                  Code Review
+                </h3>
+                <div class="paragraph-use-cases">
+                  <p>
+                    Embold provides the ability to do side by side reviews between code changes. Here architects can explain Anti-Patterns to developers and keep the design clean.
+                  </p>
+                  <p>
+                    Creating a better awareness and mutual understanding, between developers, architects and technical project managers directly at the code level. Saving you time while reviewing, that you can spent more time with creating.
+                  </p>
+                </div>
+              </div>
+              <!-- block -->
+            </div>
+          </div>
+          <div class="block-user-story">
+            <div class="wrap-content contact-sales" id="section-contactSales">
               <h4>Contact Sales</h4>
               <div class="block-contact-sales">
                 Benjamin
@@ -225,6 +322,7 @@
       </div>
     </div>
   </div>
+  <div class="nav-mobile-full-screen" id="nav-mobile-full-screen-top"></div>
   <script src="js/main.js" type="text/javascript"></script>
   <script>
   $(window).on("scroll", function() {
@@ -241,5 +339,6 @@
     }
   });
   </script>
+
 </body>
 </html>
